# rattrack

./: .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  teste.cpp  videotool.cpp
QT/: Makefile  controlpainel.cpp  controlpainel.h  controlpainel.ui  dialogconfig.cpp  dialogconfig.h  dialogconfig.ui  dialogsave.cpp  dialogsave.h  dialogsave.ui  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rattrack.pro
QT/Rattrack_v2/: Rattrack_v2.pro
QT/build-rattrack-Desktop-Debug/: Makefile  moc_controlpainel.cpp  moc_dialogconfig.cpp  moc_dialogfindcircle.cpp  moc_dialogsave.cpp  moc_mainwindow.cpp  qrc_icons.cpp  rattrack  ui_controlpainel.h  ui_dialogconfig.h  ui_dialogfindcircle.h  ui_dialogsave.h  ui_mainwindow.h
QT/rattrack/: controlpainel.cpp  controlpainel.h  controlpainel.ui  dialogconfig.cpp  dialogconfig.h  dialogfindcircle.cpp  dialogfindcircle.h  dialogfindcircle.ui  dialogsave.cpp  dialogsave.h  icons.qrc  mainwindow.cpp  (+2 more)
Tools/: CMakeLists.txt  videotool.cpp
src/: calibration.cpp  calibration.h  calibrationgui.cpp  calibrationgui.h  calibrationgui.ui  detectorinterface.h  directorycreator.h  fastmodeguiconstants.h  filesanddirectoriesconstants.h  homographyfileconstants.h  icons.qrc  inxml.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  normalmodeguiconstants.h  outcsv.h  outxml.h  quadrantsfileconstants.h  rattrack.pro  readerinterface.h  readerxml.h  settingsfileconstants.h  threshold.h  tracker.cpp  tracker.h  trackergui.cpp  trackergui.h  trackergui.ui  video.cpp  video.h  writercsv.h  writerinterface.h  writerxml.h
(+2 files in other folders)
